--- a/index.html
+++ b/index.html
@@ -156,3 +156,7 @@
             <span class="cart__prices-total">$2880</span>
         </div>
     </div>
+
+    
+        <!--==================== MAIN ====================-->
+        <main class="main">
